--- a/.github/workflows/ci-sonar.yml
+++ b/.github/workflows/ci-sonar.yml
@@ -37,8 +37,8 @@ jobs:
        run:  npm i --save-dev jest-junit
      - name: Run unit tests with coverage and JUnit reports
        env:
-        JEST_JUNIT_OUTPUT_DIR=coverage
-        JEST_JUNIT_OUTPUT_NAME=junit.xml
+        JEST_JUNIT_OUTPUT_DIR: coverage
+        JEST_JUNIT_OUTPUT_NAME: junit.xml
        run: npm run test:coverage -- --reporters=jest-junit
 
      - name: Publish test results to Checks
