--- a/.github/workflows/ci-sonar.yml
+++ b/.github/workflows/ci-sonar.yml
@@ -64,16 +64,16 @@ jobs:
          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
        with:
-         args: >
-           -Dsonar.projectKey=sample-node-app-saurabh
-           -Dsonar.organization=sda
-           -Dsonar.token=${{ secrets.SONAR_TOKEN }}
-           -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
-           -Dsonar.sources=.
-           -Dsonar.exclusions=node_modules/**,coverage/**,tests/**,**/*.test.js,**/*.spec.js
-           -Dsonar.tests=tests/
-           -Dsonar.test.inclusions=**/*.test.js,**/*.spec.js
-           -Dsonar.coverage.exclusions=node_modules/**,coverage/**,tests/**,**/*.test.js,**/*.spec.js
+        args:
+          - -Dsonar.projectKey=sample-node-app-saurabh
+          - -Dsonar.organization=sda
+          - -Dsonar.token=${{ secrets.SONAR_TOKEN }}
+          - -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
+          - -Dsonar.sources=.
+          - -Dsonar.exclusions=node_modules/**,coverage/**,tests/**,**/*.test.js,**/*.spec.js
+          - -Dsonar.tests=tests/
+          - -Dsonar.test.inclusions=**/*.test.js,**/*.spec.js
+          - -Dsonar.coverage.exclusions=node_modules/**,coverage/**,tests/**,**/*.test.js,**/*.spec.js
 
      - name: Create deployment package
        run: |
